--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -37,27 +37,22 @@ img[src*="Megaphone.png"] {
 
 .contact-container {
   display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
-  align-items: flex-start;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .contact-text {
-  flex: 1 1 300px;
+  flex: 1 1 auto;
   font-size: 1.05rem;
   line-height: 1.5;
-}
-
-.contact-text p {
-  margin: 0 0 10px 0 !important;
+  width: 100%;
 }
 
 .contact-map {
   flex: 1 1 300px;
-  min-width: 300px;
+  width: 100%;
 }
 
 .contact-map iframe {
   display: block;
 }
-
