--- a/layouts/index.html
+++ b/layouts/index.html
@@ -150,7 +150,12 @@
         {{with .content }}<p class="mb-4">{{ . | markdownify }}</p>{{ end }}
         {{ if .button.enable }}
         {{ with .button }}
-        <a href="{{ .link | relURL }}" title="{{ .label }}" class="btn btn-primary">{{ .label }}</a>
+        <a href="{{ .link }}" 
+          class="btn btn-primary" 
+          target="_blank" 
+          rel="noopener">
+          {{ .label }}
+        </a>
         {{ end }}
         {{ end }}
       </div>
@@ -161,6 +166,8 @@
 {{ end }}
 <!-- /call to action -->
 
+
+<!-- sponsors -->
 {{ with .Params.sponsors }}
 {{ if .enable }}
 <section class="section bg-white py-5">
@@ -177,5 +184,6 @@
 </section>
 {{ end }}
 {{ end }}
+<!-- /sponsors -->
 
 {{ end }}
