--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -57,7 +57,13 @@
 
         {{ if site.Params.navigation_button.enable }}
         {{ with site.Params.navigation_button }}
-        <a href="{{ .link | relLangURL }}" title="{{ .label }}" class="btn btn-sm btn-primary ml-3">{{ .label }}</a>
+        <a href="{{ .link | relLangURL }}" 
+          title="{{ .label }}" 
+          class="btn btn-sm btn-primary ml-3" 
+          target="_blank" 
+          rel="noopener">
+          {{ .label }}
+        </a>
         {{ end }}
         {{ end }}
       </div>
