--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,6 @@
 // Color Variables
 {{ with site.Params.variables }}
-$color-primary: {{.color_primary | default "#0AA8A7"}};
+$color-primary: {{.color_primary | default "#381651"}};
 $color-secondary: {{.color_secondary | default "#F9CB43"}};
 $text-color: {{.text_color | default "#777"}};
 $text-dark: {{.text_dark | default "#222"}};
