--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -63,3 +63,15 @@ img[src*="Megaphone.png"] {
   border-radius: 10px;
   margin-top: 30px;
 }
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+
+  img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+}
